--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: dev@polarnotion.com
 description: > # this means to ignore newlines until "baseurl:"
   A modular approach for training code school grads into junior software
   engineers.
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/academy" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: polarnotion
 github_username:  PolarNotion
